// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadId after documents have been loaded when the user doesn't have a Mass ID renders the page with 'Other' ID content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Your identification"
>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
      size="1"
    >
      Upload an identification document issued by state or federal government
    </Heading>
    <DocumentRequirements
      type="id"
    />
    <div
      className="border-bottom border-base-light margin-bottom-4 padding-bottom-4"
    >
      <Trans
        components={
          Object {
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "work-visa-link": <a
              href="https://travel.state.gov/content/travel/en/us-visas/employment/temporary-worker-visas.html"
              rel="noopener noreferrer"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsUploadId.otherIdentityDocs"
      />
      <Accordion>
        <AccordionItem
          heading="If you don’t have any of those documents:"
        >
          <Trans
            components={
              Object {
                "identity-proof-link": <a
                  href="https://www.mass.gov/info-details/identity-proof-for-paid-leave"
                  rel="noopener noreferrer"
                  target="_blank"
                />,
                "li": <li />,
                "puerto-rican-birth-certificate-link": <a
                  href="https://prfaa.pr.gov/faqs"
                  rel="noopener noreferrer"
                  target="_blank"
                />,
                "ul": <ul
                  className="usa-list"
                />,
              }
            }
            i18nKey="pages.claimsUploadId.accordionContent"
          />
        </AccordionItem>
      </Accordion>
    </div>
    <FileUploadDetails />
    <FileCardList
      addAnotherFileButtonText="Choose another file"
      addFirstFileButtonText="Choose files"
      documents={Array []}
      fileErrors={Array []}
      fileHeadingPrefix="File"
      onChange={[Function]}
      onRemoveTempFile={[Function]}
      tempFiles={
        TempFileCollection {
          "items": Array [],
          "itemsById": Object {},
        }
      }
    />
  </div>
</QuestionPage>
`;

exports[`UploadId after documents have been loaded when the user has a Mass ID renders a FileCardList 1`] = `
<FileCardList
  addAnotherFileButtonText="Choose another file"
  addFirstFileButtonText="Choose files"
  documents={Array []}
  fileErrors={Array []}
  fileHeadingPrefix="File"
  onChange={[Function]}
  onRemoveTempFile={[Function]}
  tempFiles={
    TempFileCollection {
      "items": Array [],
      "itemsById": Object {},
    }
  }
/>
`;

exports[`UploadId after documents have been loaded when the user has a Mass ID renders the page with Mass ID content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Your identification"
>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
      size="1"
    >
      Upload the front and back of your Massachusetts driver’s license or ID card
    </Heading>
    <DocumentRequirements
      type="id"
    />
    <FileUploadDetails />
    <FileCardList
      addAnotherFileButtonText="Choose another file"
      addFirstFileButtonText="Choose files"
      documents={Array []}
      fileErrors={Array []}
      fileHeadingPrefix="File"
      onChange={[Function]}
      onRemoveTempFile={[Function]}
      tempFiles={
        TempFileCollection {
          "items": Array [],
          "itemsById": Object {},
        }
      }
    />
  </div>
</QuestionPage>
`;

exports[`UploadId after documents have been loaded when the user has a Mass ID when the user uploads files renders filecards for the files 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Your identification"
>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
      size="1"
    >
      Upload the front and back of your Massachusetts driver’s license or ID card
    </Heading>
    <DocumentRequirements
      type="id"
    />
    <FileUploadDetails />
    <FileCardList
      addAnotherFileButtonText="Choose another file"
      addFirstFileButtonText="Choose files"
      documents={Array []}
      fileErrors={Array []}
      fileHeadingPrefix="File"
      onChange={[Function]}
      onRemoveTempFile={[Function]}
      tempFiles={
        TempFileCollection {
          "items": Array [
            TempFile {
              "file": File {},
              "id": "TempFile1",
            },
            TempFile {
              "file": File {},
              "id": "TempFile3",
            },
            TempFile {
              "file": File {},
              "id": "TempFile5",
            },
          ],
          "itemsById": Object {
            "TempFile1": TempFile {
              "file": File {},
              "id": "TempFile1",
            },
            "TempFile3": TempFile {
              "file": File {},
              "id": "TempFile3",
            },
            "TempFile5": TempFile {
              "file": File {},
              "id": "TempFile5",
            },
          },
        }
      }
    />
  </div>
</QuestionPage>
`;

exports[`UploadId before any documents have been loaded renders a spinner 1`] = `
<Spinner
  aria-valuetext="Loading applications"
/>
`;
